# quant_workflow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  EXECUTIVE_SUMMARY.txt  LICENSE  MACOS_SETUP.txt  README.md  SAGEMAKER_SETUP.txt  SECURITY.md  launch_gui.bat  pyproject.toml  requirements-gui.txt  requirements-sagemaker.txt  setup_gui.bat
.github/: CODEOWNERS
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
configs/large_data_certification/: default_acceptance_suite.json
docs/: CHECKPOINT_STAGE_GUIDE.md  DEFERRED_REPORT_SIZE_ROADMAP.md  DETAILED_PROJECT_GUIDE.md  DEVELOPMENT_ROADMAP.md  ENGINEERING_RUBRIC.md  ENTERPRISE_HARDENING_ROADMAP.md  FEATURE_SUBSET_SEARCH_REPORT_ROADMAP.md  GUI_TO_CODE_TRACEABILITY_GUIDE.md  INTERACTIVE_REPORT_USABILITY_ROADMAP.md  LOGISTIC_REGRESSION_WALKTHROUGH.html  MACOS_SETUP.md  METRIC_CATALOG.md  MODEL_CATALOG.md  PREPROCESSING_AND_DATA_TREATMENT_GUIDE.md  README.md  RELEASE_NOTES_V1.0.0.md  RELEASE_VALIDATION_REPORT.md  RUBRIC_ALIGNMENT.md  SAGEMAKER_SETUP.md  STATISTICAL_TEST_CATALOG.md  UI_ENTERPRISE_REDESIGN.md  UI_USABILITY_ROADMAP.md  UI_UX_STANDARD.md
docs/user_guides/: ARTIFACT_MAP.md  CONFIGURATION_COOKBOOK.md  DATA_REQUIREMENTS.md  EXECUTION_MODE_DECISION_GUIDE.md  GLOSSARY.md  LARGE_DATA_CERTIFICATION_GUIDE.md  LARGE_DATA_PLAYBOOK.md  MODEL_SELECTION_GUIDE.md  MODEL_TYPE_REFERENCE_GUIDE.md  PD_LOGISTIC_REGRESSION_WALKTHROUGH.html  QUICK_START.md  README.md  RUN_REGISTRY_AND_AUDIT_GUIDE.md  TROUBLESHOOTING.md  VALIDATION_REVIEWER_GUIDE.md
examples/: run_development_workflow.py  run_pipeline.py  score_existing_model.py
examples/reference_workflows/: README.md  ccar_forecasting.py  cecl_lifetime_pd.py  lgd_severity.py  pd_development.py
examples/reference_workflows/expected/: ccar_forecasting.json  cecl_lifetime_pd.json  lgd_severity.json  pd_development.json
examples/reference_workflows/packs/: ccar_forecasting.md  cecl_lifetime_pd.md  lgd_severity.md  pd_development.md
scripts/: benchmark_large_data.py  bootstrap_macos.sh  bootstrap_sagemaker.sh  certify_large_data.py  check_module_size.py  profile_workflow.py  run_macos_streamlit.sh  run_sagemaker_streamlit.sh  sagemaker_code_editor_lifecycle.sh
src/quant_pd_framework/: __init__.py  background_job_runner.py  background_jobs.py  base.py  checkpointing.py  config.py  config_io.py  config_serialization.py  context.py  decision_summary.py  diagnostic_frameworks.py  export_layout.py  export_profiles.py  feature_lineage.py  figure_exports.py  gui_launcher.py  gui_support.py  large_data.py  large_data_certification.py  large_data_enterprise.py  large_data_policy.py  large_data_runtime.py  llm_documentation_package.py  logging.py  model_dossier.py  models.py  monitoring_package.py  optional_dependencies.py  orchestrator.py  presentation.py  presets.py  reference_workflows.py  report_payload.py  reporting.py  run.py  run_registry.py  run_stage.py  safe_serialization.py  sample_data.py  segmented_model.py  (+5 more)
src/quant_pd_framework/diagnostics/: __init__.py  assets.py  registry.py  scoring.py
src/quant_pd_framework/exporting/: __init__.py  layout.py  manifest.py
src/quant_pd_framework/large_data_support/: __init__.py  constants.py  handles.py
src/quant_pd_framework/steps/: __init__.py  assumption_checks.py  backtesting.py  cleaning.py  comparison.py  cross_validation.py  diagnostics.py  evaluation.py  export.py  feature_engineering.py  feature_subset_search.py  imputation.py  ingestion.py  large_data_scoring.py  schema.py  splitting.py  target.py  training.py  transformations.py  validation.py  variable_selection.py
src/quant_pd_framework/streamlit_ui/: __init__.py  app_controller.py  artifact_summary.py  audit.py  config_builder.py  config_profiles.py  data.py  decision_room.py  enterprise_workflow.py  error_guidance.py  glossary.py  model_story_cards.py  output_explainers.py  results.py  run_execution.py  scorecard_workbench.py  state.py  theme.py  workflow_feedback.py  workspace.py
src/quant_pd_framework/streamlit_ui/result_panels/: __init__.py  registry_audit.py
src/quant_pd_framework/streamlit_ui/steps/: __init__.py  step1_data_schema.py  step2_model_config.py  step3_readiness_run.py  step4_results_artifacts.py  step5_decision_summary.py
tests/: __init__.py  support.py  test_advanced_roadmap_features.py  test_artifact_contracts.py  test_assumption_checks.py  test_batch_scripts.py  test_calibration_workflow.py  test_canonical_workflows.py  test_checkpointed_workflow.py  test_configuration_profiles.py  test_context_and_config_boundaries.py  test_cross_validation.py  test_decision_summary.py  test_development_features.py  test_enterprise_workflow.py  test_existing_model_scoring.py  test_feature_engineering.py  test_feature_subset_search_mode.py  test_framework_expansion_phase.py  test_governance_extensions.py  test_gui_launcher.py  test_gui_support.py  test_imputation.py  test_large_data_certification.py  test_large_data_controls.py  test_large_data_standard_override.py  test_model_variants.py  test_modular_refactor_boundaries.py  test_numerical_hardening_and_reporting.py  test_operational_hardening.py  test_performance_controls.py  test_pipeline_smoke.py  test_presentation.py  test_reference_workflows.py  test_report_payload.py  test_roadmap_features.py  test_run_registry.py  test_safe_serialization.py  test_sample_data.py  test_saved_run_bundle.py  (+10 more)
