[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pd-framework"
version = "0.1.0"
description = "Extensible object-oriented framework for quantitative model training, validation, scoring, and export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3",
    "kaleido>=1.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=6.0",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "xgboost>=3.0",
]

[project.scripts]
quant-pd-gui = "quant_pd_framework.gui_launcher:main"
quant-pd-run = "quant_pd_framework.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
gui = [
    "streamlit>=1.44",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
