[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pd-framework"
version = "1.0.0"
description = "Extensible object-oriented framework for quantitative model training, validation, scoring, and export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3",
    "duckdb>=1.0",
    "kaleido>=1.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=6.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "xlrd>=2.0",
    "xgboost>=3.0",
]

[project.scripts]
quant-pd-gui = "quant_pd_framework.gui_launcher:main"
quant-pd-run = "quant_pd_framework.run:main"
quant-pd-run-stage = "quant_pd_framework.run_stage:main"
quant-pd-background-job = "quant_pd_framework.background_job_runner:main"
quant-pd-worker = "quant_pd_framework.worker_service:main"
quant-pd-certify-large-data = "quant_pd_framework.large_data_certification:main"

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5",
    "mypy>=1.14",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
gui = [
    "streamlit>=1.44",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
filterwarnings = [
    "ignore:divide by zero encountered in log:RuntimeWarning:statsmodels.regression.linear_model",
    "ignore:Perfect separation or prediction detected, parameter may not be identified:statsmodels.tools.sm_exceptions.PerfectSeparationWarning:statsmodels.genmod.generalized_linear_model",
    "ignore:Maximum Likelihood optimization failed to converge. Check mle_retvals:statsmodels.tools.sm_exceptions.ConvergenceWarning:statsmodels.base.model",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "BLE",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
# Existing broad-exception debt is allowed only in these files while the ratchet
# is reduced. New files do not receive this ignore by default.
"src/quant_pd_framework/background_jobs.py" = ["BLE001"]
"src/quant_pd_framework/checkpointing.py" = ["BLE001"]
"src/quant_pd_framework/diagnostic_frameworks.py" = ["BLE001"]
"src/quant_pd_framework/figure_exports.py" = ["BLE001"]
"src/quant_pd_framework/gui_support.py" = ["BLE001"]
"src/quant_pd_framework/large_data.py" = ["BLE001"]
"src/quant_pd_framework/large_data_certification.py" = ["BLE001"]
"src/quant_pd_framework/large_data_enterprise.py" = ["BLE001"]
"src/quant_pd_framework/large_data_runtime.py" = ["BLE001"]
"src/quant_pd_framework/llm_documentation_package.py" = ["BLE001"]
"src/quant_pd_framework/orchestrator.py" = ["BLE001"]
"src/quant_pd_framework/presentation.py" = ["BLE001"]
"src/quant_pd_framework/run_registry.py" = ["BLE001"]
"src/quant_pd_framework/stage_runner.py" = ["BLE001"]
"src/quant_pd_framework/steps/cross_validation.py" = ["BLE001"]
"src/quant_pd_framework/steps/diagnostics.py" = ["BLE001"]
"src/quant_pd_framework/steps/export.py" = ["BLE001"]
"src/quant_pd_framework/steps/feature_subset_search.py" = ["BLE001"]
"src/quant_pd_framework/steps/ingestion.py" = ["BLE001"]
"src/quant_pd_framework/steps/large_data_scoring.py" = ["BLE001"]
"src/quant_pd_framework/steps/transformations.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/app_controller.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/config_builder.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/config_profiles.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/data.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/results.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/state.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/steps/step3_readiness_run.py" = ["BLE001"]
"src/quant_pd_framework/streamlit_ui/workspace.py" = ["BLE001"]

[tool.mypy]
python_version = "3.11"
files = [
    "src/quant_pd_framework/base.py",
    "src/quant_pd_framework/background_job_runner.py",
    "src/quant_pd_framework/config.py",
    "src/quant_pd_framework/config_io.py",
    "src/quant_pd_framework/config_serialization.py",
    "src/quant_pd_framework/context.py",
    "src/quant_pd_framework/export_profiles.py",
    "src/quant_pd_framework/gui_launcher.py",
    "src/quant_pd_framework/large_data_policy.py",
    "src/quant_pd_framework/logging.py",
    "src/quant_pd_framework/presets.py",
    "src/quant_pd_framework/run.py",
    "src/quant_pd_framework/run_stage.py",
    "src/quant_pd_framework/safe_serialization.py",
    "src/quant_pd_framework/workflow_guardrails.py",
]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["quant_pd_framework"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
